[package]
name = "zetax_macro"
description = "ZTX is a simple & fast RoQ (RPC over QUIC) framework built using TQUIC"
authors = ["アクゼスティア <akzestia@gmail.com>"]
license = "MIT"
keywords = ["roq", "rpc", "quic", "networking", "framework"]
categories = ["network-programming", "asynchronous", "command-line-utilities"]
repository = "https://github.com/Akzestia/ztx"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits", "full"] }


[lib]
path = "src/lib.rs"
proc-macro = true
